--- a/public/locales/hi/common.json
+++ b/public/locales/hi/common.json
@@ -174,6 +174,7 @@
     "DELETE_CONFIRMATION": "को भेजा गया निमंत्रण हटाएं",
     "CANCEL": "रद्द करें",
     "REVOKE": " निमंत्रण रद्द करें",
+    "REVOKED_SUCCESS": "आमंत्रण सफलतापूर्वक रद्द किया गया",
     "ACCEPTED_SUCCESS": "अनुरोध सफलतापूर्वक स्वीकारा गया",
     "REJECTED_SUCCESS": "अनुरोध अस्वीकार किया गया",
     "ERROR_UPDATING_REQUEST": "अनुरोध अपडेट करने में त्रुटि",
