--- a/public/locales/mr/common.json
+++ b/public/locales/mr/common.json
@@ -174,6 +174,7 @@
     "DELETE_CONFIRMATION": "याला पाठवलेले निमंत्रण हटवा",
     "CANCEL": "रद्द करा",
     "REVOKE": "निमंत्रण रद्द करा",
+    "REVOKED_SUCCESS":"निमंत्रण यशस्वीरित्या रद्द केले",
     "ACCEPTED_SUCCESS": "विनंती यशस्वीरित्या स्वीकारली",
     "REJECTED_SUCCESS": "विनंती नाकारली",
     "ERROR_UPDATING_REQUEST": "विनंती अद्यतनित करताना त्रुटी",
