--- a/public/locales/or/common.json
+++ b/public/locales/or/common.json
@@ -174,6 +174,7 @@
     "DELETE_CONFIRMATION": "କୁ ପଠାଯାଇଥିବା ନିମନ୍ତ୍ରଣ ବିଲୋପ କରନ୍ତୁ",
     "CANCEL": "ବାତିଲ୍ କରନ୍ତୁ",
    "REVOKE": "ନିମନ୍ତ୍ରଣ ବାତିଲ୍ କରନ୍ତୁ",
+   "REVOKED_SUCCESS":"ନିମନ୍ତ୍ରଣ ସଫଳତାର ସହ ରଦ୍ଦ କରାଯାଇଛି",
     "ACCEPTED_SUCCESS": "ଅନୁରୋଧ ସଫଳତାର ସହିତ ଗ୍ରହଣ କରାଯାଇଛି",
     "REJECTED_SUCCESS": "ଅନୁରୋଧ ଅସ୍ଵୀକାର କରାଯାଇଛି",
     "ERROR_UPDATING_REQUEST": "ଅନୁରୋଧ ଅଦ୍ୟତନ କରିବାରେ ତ୍ରୁଟି",
