--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -145,7 +145,9 @@
     "ENABLE_ROLE": "Enable Role",
     "SEND_INVITATION_TO_NEW_ADMIN": "Send Invitation to new cohort admin",
     "SEND_INVITATION": "Send Invitation",
-    "METABASE_REPORTS": "Metabase Report"
+    "METABASE_REPORTS": "Metabase Report",
+    "USER_JOURNEY_REPORT":"User Journey Report",
+    "USER_RESPONSE_EVENT":"User Response Event Report"
   },
   "LOGIN_PAGE": {
     "USERNAME": "Username",
