--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -152,7 +152,8 @@
     "NEW_PASSWORD": "New Password",
     "CONFIRM_PASSWORD": "Confirm Password",
     "PASSWORD_RESET_SUCCESSFUL": "Password Reset Successful!",
-    "PASSWORD_RESET_FAILED": "Password Reset Failed. Please try again."
+    "PASSWORD_RESET_FAILED": "Password Reset Failed. Please try again.",
+    "ENTER_VALID_PASSWORD": "Enter Valid Password"
   },
   "LOGIN_PAGE": {
     "USERNAME": "Username",
@@ -163,7 +164,35 @@
     "USERNAME_PASSWORD_NOT_CORRECT": "The username or password you entered is incorrect",
     "FORGOT_PASSWORD": "Forgot Password?",
     "REMEMBER_ME": "Remember Me",
-    "ACCESS_DENIED": "You do not have access to the portal. Please check your username or password."
+    "ACCESS_DENIED": "You do not have access to the portal. Please check your username or password.",
+    "CONFIRM_PASSWORD": "Confirm password",
+    "RESET_PASSWORD": "Reset Password",
+    "CREATE_NEW": "Create a new, strong password that you don't use for other websites",
+    "NOT_MATCH": "Passwords do not match",
+    "CHARACTERS_LONG": "Passwords must be at least 8 characters long",
+    "OLD_PASSWORD": "Old Password",
+    "NEW_PASSWORD": "New Password",
+    "CONFIRM_NEW_PASSWORD": "Confirm New Password",
+    "TROUBLE_LOGIN": "Trouble with logging in?",
+    "ENTER_USERNAME_TO_GET_LINK": "Enter your username, we’ll send you a link to get back into your account.",
+    "ENTER_USERNAME": "Enter Username",
+    "BACK_TO_LOGIN": "Back to Login",
+    "CREATE_STRONG_PASSWORD": "Create a strong password",
+    "YOUR_PASSWORD_NEED": "Your password needs to:",
+    "INCLUDE_BOTH": "Include both upper case and lower case",
+    "INCLUDE_NUMBER": "Include at least one number",
+    "INCLUDE_SPECIAL": "Include at least one special character",
+    "MUST_BE_AT": "Must be at least 8 characters long",
+    "OTHER_SETTING": "Other settings",
+    "WELCOME": "Welcome!",
+    "PLEASE_RESET_YOUR_PASSWORD": "Please reset your password to ensure your account is secure",
+    "DO_IT_LATER": "I’ll do it later",
+    "SUCCESSFULLY_RESET": "Your password has been successfully reset",
+    "LINK_EXPIRED": "Link has been expired",
+    "WE_SEND_AN_EMAIL": "We sent an email to {{maskEmail}} with a link to reset your password",
+    "CURRENT_PASSWORD_NOT": "Current Password Not Matched",
+    "NO_USERNAME": "Username not found",
+    "PASSWORD_SAME_AS_OLD": "Password same as old"
   },
   "SIDEBAR": {
     "HI": "hi",
